--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Collection of helpers for runing inside lambda environments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/jshint/bin/jshint *.js",
+    "validate": "npm ls"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "aws-sdk": "^2.3.11"
-  }
+    "aws-sdk": "^2.3.11",
+    "jshint": "^2.9.2",
+    "precommit-hook": "^3.0.0"
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
